--- a/css/footer.css
+++ b/css/footer.css
@@ -44,12 +44,21 @@
   height: 200px;
 }
 
+@keyframes flip-vertical-right {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
 @keyframes flip {
   0% {
     transform: rotateY(0);
   }
   100% {
-    transform: rotateY(360deg) scale(1.1);
+    transform: rotateY(360deg);
   }
 }
 
